updated 404.html, vite.config

--- a/404.html
+++ b/404.html
@@ -1,22 +1,20 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
   <head>
-    <meta charset="utf-8">
-    <title>Design Portfolio</title>
-    <script type="text/javascript">  
- 
-      var pathSegmentsToKeep = 0;
-
-      var l = window.location;
-      l.replace(
-        l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
-        l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + '/?/' +
-        l.pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/').replace(/&/g, '~and~') +
-        (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
-        l.hash
-      );
-    </script>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="./src/assets/Logo/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Page Not Found - Redirecting...</title>
   </head>
   <body>
+    <h1>Redirecting...</h1>
+    <script type="text/javascript">
+      // Redirect any 404 error page back to the root or the specific route
+      var redirect = window.location.pathname;
+      if (!redirect.startsWith('/')) {
+        redirect = '/' + redirect;
+      }
+      window.location = '/' + redirect + '?redirected=true';
+    </script>
   </body>
 </html>
